# efeed

./: .gitignore  Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure.ac  libtool
src/: Makefile  Makefile.am  Makefile.in  efeed.edc  efeed.edj  efeed.vala  entities.vala
src/.deps/: efeed.Po
